--- a/2020_EFM_MPM_Eigensoftening.tex
+++ b/2020_EFM_MPM_Eigensoftening.tex
@@ -343,8 +343,7 @@ Material Point Method \sep Solid Dynamics
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Introduction}
 \label{sec:1}
-The presence of cracks is a violation of the continuity requirement of the
-\acrfull{fem}. To overcome this issue, numerous numerical
+\DM{The failure mechanisms of quasi-brittle materials and the  crack propagation have been studied from different fields such as materials science, structural engineering, earth science and petroleum engineering . The prediction of crack propagation has been approached with different numerical techniques. The \acrfull{fem} is widely used in industrial application. However,} the presence of cracks is a violation of the continuity requirement of the \acrfull{fem}. To overcome this issue, numerous numerical
 artifacts have been proposed with the aim of reproducing such a
 complex behaviour. These techniques vary from the employment of cohesive
 approaches~\cite{Barenblatt,Hilleborg_1976}, \PNA{to the gradual insertion of}
@@ -359,6 +358,12 @@ examples of it are the \acrfull{mpm}
 \acrfull{sph} \cite{Wang_2020,Wang_2019}, the \acrfull{otm} \cite{Li2010,Li_2012,Pandolfi_2013,Li_2015} or Peridynamics
 \cite{HA_2011,RABCZUK_2017} among others. \\
 
+
+ \DM{ Miguel...esto artículos se pueden citar pra enteder la evolución de la progración de la fractura. Hay estados del arte muy buenos entre ellos.  X-FEM with Level set
+T. Nagashima, M. Sawada Development of a damage propagation analysis system based on level set XFEM using the cohesive zone model Comput Struct, 174 (2016), pp. 42-53
+J. Huang An efficient morphology generation and level set representation of cementitious microstructures with arbitrarily shaped aggregates and cracks via extended finite elements
+Comput Struct, 206 (2018), pp. 122-144
+Y. Abdelaziz, A. Hamouine A survey of the extended finite element Comput Struct, 86 (11) (2008), pp. 1141-1151}
 Regarding \acrshort{mpm}, fracture \PNA{has been treated numerically through two different ways}. On the one hand, the ``CRAcks with Material Points (CRAMP)'' is proposed~\cite{Nairn_2003,Nairn_2006}. \PNA{The basis of this methodology consist of the removal of} the restriction
 of the single-valued velocity field close to the crack through, at least, two sets of nodes. In this method, different labels are assigned to the material points
 and nodes to distinguish if they are in the same side of the crack or
@@ -498,7 +503,7 @@ ensures a \textit{unbiased statistical inference} based on the nodal
 data as states the Jayne's\cite{Jaynes1957} principle of
 \textit{maximum entropy}. And second the Delaunay triangulation that
 warranties the \textit{least width} shape function support. To reach
-\DM{delete to} a compromise between two competing objectives, a Pareto set is
+a compromise between two competing objectives, a Pareto set is
 defined as,
 \begin{align*}
   \label{eq:LME-scheme-pareto-set}
@@ -949,8 +954,8 @@ Figure \ref{fig:Figure-Angle-Forces-test-damage-pattern} shows the
 comparison of mixed-mode fracture envelope between experiments and
 \acrshort{mpm} simulations for different notch inclination angles
 $\alpha$ = 0$^{\circ}$, 30$^{\circ}$ and 60$^{\circ}$. The final
-fracture pattern is a vertical straight line when $\alpha$ =
-0$^{\circ}$  (pure mode I). When $\alpha$ > 0$^{\circ}$, the sample is
+fracture pattern is a vertical straight line when $\alpha$ = 0$^{\circ}$  (pure mode I). 
+When $\alpha$ > 0$^{\circ}$, the sample is
 subjected to mixed-mode. For simulation cases 0$^{\circ}$ and 30$^{\circ}$, the fractures
 initiate from the notch tip and then propagate towards upper loading
 point. Experiments show that a few fractures tend to initiate behind
@@ -1109,9 +1114,17 @@ other side of the crack.
 
 \section{Conclusions}
 \label{sec:4}
-\PNA{Based on the EigenMPM approach to fracture proposed by Zhang {\it et al.}
+
+\DM{Cometario general: Pienso que hay que estructurar un poco la conclusión. No agregar tantas citas. Acá estás concluyendo tu trabajo. Iría de lo general a lo particular. Pondría claramente en cada parrafo cual es el aporte. Con tantas citas no queda claro que hiciste vos y que los otros. Las citas estarán puestas cuando vos comenzaste a hablar de lo que hiciete en el cuerpo del documento. Acá las citas minimas y tus aportes.
+Imagino un primer parrafo asi diciendo cuales son las limitaciones ...propuesta modificable...:}
+
+\DM{The paper proposes the eigensoftening algorithm in a \acrshort{MPM} framework for quasi-brittle materials to overcome the limitations observed in the EigenMPM \cite{Zhang_EE_2020}. The overestimation of tensile 
+stress and strain peaks in the fracture mechanism of quasi-brittle materials and the stress oscillations observed with conventional \acrshort{mpm}/\acrshort{gimp} are faced.  }
+
+\PNA{Based on the EigenMPM approach to fracture proposed by Zhang {\it et al.} 
 \cite{Zhang_EE_2020}, two additional improvements have been proposed in the present research in order to 
-solve the shortcomings of the original concept that Zhang {\it et al.} pointed out in the aforementioned paper \cite{Zhang_EE_2020}. 
+solve the shortcomings of the original concept that Zhang {\it et al.} pointed out in the aforementioned paper \cite{Zhang_EE_2020}. }
+
 
 Firstly, by
 introducing the concept of eigensoftening to the \acrshort{mpm} framework,
@@ -1132,7 +1145,7 @@ developed. Navas~\textif{et al.} demonstrate the importance of the
 stiffness of the support in order to obtain accurate results of the
 reaction forces. Interesting contact algorithms within the
 \acrshort{mpm} methodology are available in the literature
-\cite{Bardenhagen_Contact_2001,XZhang_Contact_2011}}
+\cite{Bardenhagen_Contact_2001,XZhang_Contact_2011}
 
 \section*{Acknowledgements}
 The financial support to develop this research from the Ministerio de
