Cambios MMP propuestos por DM

--- a/Biblio.bib
+++ b/Biblio.bib
@@ -183,6 +183,61 @@ year = {2018}
 % Fracture --------------------------------------------
 %------------------------------------------------------
 
+@article{YUN_2019,
+title = "A computational methodology for simulating quasi-brittle fracture problems",
+journal = "Computers & Structures",
+volume = "215",
+pages = "65 - 79",
+year = "2019",
+issn = "0045-7949",
+doi = "https://doi.org/10.1016/j.compstruc.2019.02.003",
+url = "http://www.sciencedirect.com/science/article/pii/S004579491831513X",
+author = "Kumchol Yun and Zhenqing Wang and Mengzhou Chang and Jingbiao Liu and Tae-Jong Kim and Namjin Son and Kyongsu Ji and Sakaya Ronald",
+keywords = "Three-dimensional fracture, Crack tracking algorithm, Anisotropic damage, Crack surface discretization, Local tracking"
+}
+
+@article{NAGASHIMA_2016,
+title = "Development of a damage propagation analysis system based on level set XFEM using the cohesive zone model",
+journal = "Computers & Structures",
+volume = "174",
+pages = "42 - 53",
+year = "2016",
+note = "CIVIL-COMP",
+issn = "0045-7949",
+doi = "https://doi.org/10.1016/j.compstruc.2015.10.005",
+url = "http://www.sciencedirect.com/science/article/pii/S0045794915002862",
+author = "T. Nagashima and M. Sawada",
+keywords = "XFEM, Cohesive zone model, Level set method, Tip element, Implicit method, Explicit method"
+}
+
+@article{ABDELAZIZ_2008,
+title = "A survey of the extended finite element",
+journal = "Computers & Structures",
+volume = "86",
+number = "11",
+pages = "1141 - 1151",
+year = "2008",
+issn = "0045-7949",
+doi = "https://doi.org/10.1016/j.compstruc.2007.11.001",
+url = "http://www.sciencedirect.com/science/article/pii/S0045794907002957",
+author = "Yazid Abdelaziz and Abdelmadjid Hamouine",
+keywords = "Extended finite element, Level sets method, Fracture mechanics"
+}
+
+@article{HUANG_2018,
+title = "An efficient morphology generation and level set representation of cementitious microstructures with arbitrarily shaped aggregates and cracks via extended finite elements",
+journal = "Computers & Structures",
+volume = "206",
+pages = "122 - 144",
+year = "2018",
+issn = "0045-7949",
+doi = "https://doi.org/10.1016/j.compstruc.2018.05.010",
+url = "http://www.sciencedirect.com/science/article/pii/S0045794917318084",
+author = "Junjie Huang",
+keywords = "Cementitious microstructures, Aggregate inclusions, Level set method, Extended finite element method, Fractional Brownian motion, Packing algorithm"
+}
+
+
 @article{LIM_1993,
 title = "Stress intensity factors for semi-circular specimens under three-point bending",
 journal = "Engineering Fracture Mechanics",
