Cambios MMP Conclusiones

--- a/2020_EFM_MPM_Eigensoftening.tex
+++ b/2020_EFM_MPM_Eigensoftening.tex
@@ -1155,7 +1155,7 @@ volumetric stiffness remains in order to support bulk loads. Also the
 benefits of \acrshort{lme} can be exploited by adapting it through the
 deformation gradient \cite{Kochmann2019}. \textit{A priori} this would
 enhance the localisation properties of the proposed algorithms in more
-sophisticated domains.
+sophisticated domains. And the implementation of a contact algorithm to model other impact cases such as bullets collisions. 
 
 \section*{Acknowledgements}
 The financial support to develop this research from the Ministerio de
